[package]
name = "typing_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
serde_json = "1.0.89"
markdown_to_text = '1.0'
crossterm = "0.25.0"
